Team-Ionis_Paris/navigation/navigationCss.css
#navigation {
    display: flex;
    flex-direction: column;
    background-color: white;
    max-width: 390px;
    width: 390px;
    padding: 40px 30px;
    height: 100vh;
    max-height: 100vh;
    overflow-y: hidden;
    position: fixed;
    top: 0;
    left: 0;
    -webkit-box-shadow: 2px 0px 20px 0px rgba(0, 0, 0, 0.03);
    -moz-box-shadow: 2px 0px 20px 0px rgba(0, 0, 0, 0.03);
    box-shadow: 2px 0px 20px 0px rgba(0, 0, 0, 0.03);
}

#navigation nav {
    margin-top: 50px;
    flex-grow: 1;
}

#navigation .igemLogo {
    padding: 0 10px;
}

#navigation .itemNav {
    list-style-type: none;
    margin-bottom: 6px;
}

#navigation .igemLogoImg {
    width: 100px;
}

#navigation .navTextLink,
#navigation .itemNavFlex {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 13px;
    border-radius: 5px;
    cursor: pointer;
}

#navigation .navTextLink:hover,
#navigation .itemNavFlex:hover {
    background-color: rgba(0, 0, 0, 0.03);
}

#navigation .navTextLink,
#navigation .itemNavText {
    font-weight: 800;
    color: rgba(0, 0, 0, 0.7);
    text-decoration: none;
    
}

#navigation .navTextLink,
#navigation .itemNavText .Home{
    color: rgba(255, 0, 0, 0.7);
}

#navigation .iconNavChevronContainer {
    display: flex;
    align-items: center;
    transition: transform 0.3s;
}

#navigation .iconNavChevron {
    height: 20px;
}

#navigation .navContent {
    padding: 10px 0;
    display: flex;
    flex-direction: column;
    gap: 0px;
    color: rgba(0, 0, 0, 0.6);
    font-weight: 800;
    font-size: 0.9rem;
}

#navigation .navSubItemsList {
    padding: 7px 20px;
    border-radius: 5px;
    cursor: pointer;
}

#navigation .navSubItemsList:hover {
    background-color: rgba(0, 0, 0, 0.03);
}

#navigation .socials {
    background-color: rgba(0, 0, 0, 0.03);
    display: flex;
    max-width: 120px;
    height: 40px;
    min-height: 40px;
    align-items: center;
    border-radius: 5px;
    overflow: hidden;
}

#navigation .socials a {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    color: black;
    flex-grow: 1;
}

#navigation .socials a:hover {
    background-color: rgba(0, 0, 0, 0.03);
}

#navigation .socials a > svg {
    display: flex;
    align-items: center;
    color: black;
    height: 15px;
}

